# ibus-table-erbi

./: Makefile.am  README  configure.ac
icons/: Makefile.am
m4/: Makefile.am
tables/: Makefile.am
